# Catikin_ws

devel/lib/pkgconfig/: receive_image.pc  sendAndWriteImgByGPS.pc  send_image.pc  send_write_img_gps.pc  video_stream_opencv.pc
devel/lib/receive_image/: receive_image
devel/lib/sendAndWriteImgByGPS/: sendAndWriteImgByGPS
devel/lib/send_image/: send_image
devel/lib/send_write_img_gps/: send_write_img_gps
src/build-receive_image-Desktop_Qt_5_12_0_GCC_64bit-Default/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  receive_image.cbp
src/build-receive_image-Desktop_Qt_5_12_0_GCC_64bit-Default/atomic_configure/: setup.sh
src/build-receive_image-Desktop_Qt_5_12_0_GCC_64bit-Default/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
src/build-receive_image-Desktop_Qt_5_12_0_GCC_64bit-Default/devel/: .catkin  .rosinstall  local_setup.sh
src/build-receive_image-Desktop_Qt_5_12_0_GCC_64bit-Default/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake  googletest-distribution.cbp
src/build-receive_image-Desktop_Qt_5_12_0_GCC_64bit-Default/include_receive_autogen/: moc_predefs.h
src/build-receive_image-Desktop_Qt_5_12_0_GCC_64bit-Default/receive_image_autogen/: moc_predefs.h
src/build-send_image-Desktop_Qt_5_12_0_GCC_64bit-Default/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  send_image.cbp
src/build-send_image-Desktop_Qt_5_12_0_GCC_64bit-Default/atomic_configure/: .rosinstall
src/build-send_image-Desktop_Qt_5_12_0_GCC_64bit-Default/catkin_generated/: generate_cached_setup.py  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  (+1 more)
src/build-send_write_img_gps-Desktop_Qt_5_12_0_GCC_64bit-Default/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  send_write_img_gps.cbp
src/receive_image/: CMakeLists.txt  package.xml
src/send_image/: CMakeLists.txt  readme
src/send_image/include/: sendimage.h  spin.h
src/send_image/src/: main.cpp  sendimage.cpp  spin.cpp
src/send_write_img_gps/: CMakeLists.txt  package.xml  readme
src/send_write_img_gps/include/: sendimage.h
src/send_write_img_gps/src/: main.cpp  sendimage.cpp
(+69 files in other folders)
